@@ -66,6 +66,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   disabling upload protection by removing it from $wgRestrictionTypes.
 * If an edit summary exceeds 250 bytes and is truncated, add an ellipse
 * (bug 26638) Database error pages display correctly in RTL languages
+* (bug 26187) Confirmrecreate no longer parses the edit summary
 
 === API changes in 1.18 ===
 * (bug 26339) Throw warning when truncating an overlarge API result
